# monero-dart

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: builder.dart
example/: README.md  monero.dart  pubspec.yaml
example/android/: local.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/monero_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: monero.dart  monero_bindings_generated.dart
linux/: CMakeLists.txt
macos/: monero.podspec
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: lib.rs
src/: monero.h
windows/: CMakeLists.txt
