[package]
name = "monero"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Use the monero-rust wrapper crate as a path dependency.
monero_rust = { package = "monero-rust", path = "../monero-rust", default-features = false }
# Force reqwest to use rustls to avoid OpenSSL issues on Android.
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "android")'.dependencies]
# Use vendored OpenSSL for Android to avoid cross-compilation issues.
openssl = { version = "0.10", features = ["vendored"] }
